# pdf-extractor

./: .dockerignore  .gitignore  README.md
core/: Dockerfile  config.py  constants.py  core.py  main.py  output.py  pyproject.toml
core/cli/: __main__.py
core/config/: base.yml
core/lm/: llm.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/highlights/: route.ts
frontend/src/lib/: setup.ts
