[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "fastapi>=0.115.13",
    "litellm>=1.73.0",
    "pydantic>=2.11.7",
    "pydantic-settings[yaml]>=2.10.0",
    "pymupdf>=1.26.1",
    "uvicorn>=0.34.3",
    "wordfreq>=3.1.1",
]
